--- a/.prettierrc
+++ b/.prettierrc
@@ -1,7 +1,14 @@
 {
-    "tabWidth": 2,
-    "printWidth": 120,
+    "trailingComma": "none",
+    "semi": true,
     "singleQuote": true,
-    "trailingComma": "es5",
-    "semi": true
+    "printWidth": 80,
+    "singleAttributePerLine": true,
+    "arrowParens": "always",
+    "bracketSameLine": false,
+    "bracketSpacing": true,
+    "jsxSingleQuote": false,
+    "quoteProps": "as-needed",
+    "tabWidth": 2,
+    "useTabs": false
   }
