--- a/package.json
+++ b/package.json
@@ -13,42 +13,51 @@
     "lint:fix": "eslint --fix ."
   },
   "dependencies": {
+    "@emotion/react": "^11.10.0",
+    "@emotion/styled": "^11.10.0",
+    "@hookform/resolvers": "^2.9.7",
     "@material-ui/core": "^4.12.2",
     "@material-ui/icons": "^4.11.2",
     "@material-ui/lab": "^4.0.0-alpha.60",
+    "@mui/material": "^5.10.0",
     "cross-env": "^7.0.3",
-    "next": "11.0.1",
+    "next": "^12.2.5",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-hook-form": "^7.34.1",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "@testing-library/dom": "^8.1.0",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^12.0.0",
     "@testing-library/user-event": "^13.2.0",
-    "@types/jest": "^26.0.24",
-    "@types/node": "^16.4.1",
-    "@types/react": "^17.0.14",
-    "@types/react-dom": "^17.0.9",
-    "@typescript-eslint/eslint-plugin": "^4.28.4",
-    "@typescript-eslint/parser": "^4.28.4",
+    "@types/date-fns": "^2.6.0",
+    "@types/lodash": "^4.14.182",
+    "@types/node": "^17.0.35",
+    "@types/nprogress": "^0.2.0",
+    "@types/numeral": "^2.0.2",
+    "@types/prettier": "^2.6.3",
+    "@types/react": "^17.0.48",
+    "@types/react-dom": "^18.0.6",
+    "@types/react-draft-wysiwyg": "^1.13.4",
+    "@types/react-redux": "^7.1.24",
+    "@types/yup": "^0.29.14",
+    "@typescript-eslint/parser": "^5.23.0",
     "axe-core": "^4.3.1",
     "babel-plugin-import": "^1.13.3",
     "commitizen": "^4.2.4",
     "cz-conventional-changelog": "3.3.0",
-    "eslint": "^7.31.0",
-    "eslint-config-airbnb": "^18.2.1",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-import-resolver-typescript": "^2.4.0",
-    "eslint-plugin-import": "^2.23.4",
-    "eslint-plugin-jsx-a11y": "^6.4.1",
-    "eslint-plugin-prettier": "^3.4.0",
-    "eslint-plugin-react": "^7.24.0",
-    "eslint-plugin-react-hooks": "^4.2.0",
+    "eslint": "^8.20.0",
+    "eslint-config-next": "^12.0.10",
+    "eslint-plugin-prettier": "^4.0.0",
+    "eslint-plugin-react": "^7.29.4",
+    "eslint-plugin-react-hooks": "^4.5.0",
+    "eslint-plugin-tailwindcss": "^3.6.0",
     "jest": "^27.0.6",
     "jest-environment-jsdom": "^27.0.6",
     "lint-staged": "^11.1.0",
-    "prettier": "^2.3.2",
+    "prettier": "^2.7.1",
     "ts-node": "^10.1.0",
     "typescript": "^4.3.5"
   },
