added formprovider and formcontect hook

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -33,6 +33,7 @@
       "jsx-a11y/alt-text": "off",
       "react/display-name": "off",
       "react/no-children-prop": "off",
+      "react/jsx-props-no-spreading": "off",
       "react/jsx-max-props-per-line": [
         1,
         {
